Ensure responsive wrapping for messages in row-reverse layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,8 @@
   background-color: #eceefe;
   height: 100vh;
   min-height: 1070px; // anpassen
-  width: 100vw;
-  margin: -8px;
+  // width: 100vw;
+  // margin: -8px;
 }
 
 @media (max-width: $mobile-xl) {
